--- a/public/index.html
+++ b/public/index.html
@@ -118,7 +118,7 @@
     </main>
     
 <footer class="footer">
-        <span>&copy; 2024 <a href="//localhost:1313/">leggiamolo</a></span> · 
+        <span>Gabriele Cucinotta</span> · 
 
     <span>
         Powered by
